# pqsecure-mesh

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  build.rs  docker-compose.yml  whitepaper.md
config/: config.yaml.example  default.toml  policy.yaml.example
src/: config.rs  error.rs  lib.rs  main.rs  types.rs
src/api/: errors.rs  middlewares.rs  mod.rs  routes.rs  server.rs  types.rs
src/api/handlers/: health.rs  identity.rs  metrics.rs  mod.rs  policy.rs  routes.rs  server.rs
src/ca/: client.rs  csr.rs  mock.rs  mod.rs  provider.rs  smallstep.rs  types.rs
src/common/: error.rs  errors.rs  mod.rs  types.rs  utils.rs
src/config/: mod.rs  policy.yaml  settings.rs
src/controller/: health.rs  mod.rs  rotation.rs  sidecar.rs
src/crypto/: cert_gen.rs  mod.rs  pqc.rs  pqc_verifier.rs  tls.rs  x509.rs
src/domain/: cert.rs  mod.rs
src/identity/: mod.rs  provider.rs  service.rs  spiffe.rs  types.rs  verifier.rs  x509.rs
src/infra/: mod.rs  smallstep.rs
src/interface/: mod.rs  rest_api.rs
src/policy/: engine.rs  evaluator.rs  mod.rs  model.rs  store.rs  types.rs
src/proxy/: connection.rs  forwarder.rs  gprc.rs  grpc.rs  handler.rs  http.rs  mod.rs  pqc_acceptor.rs  sidecar.rs  tcp.rs  types.rs
src/proxy/protocol/: grpc.rs  http_tls.rs  mod.rs  raw_tcp.rs
src/service/: cert_service.rs  mod.rs
src/telemetry/: logging.rs  metrics.rs  mod.rs  tracing.rs
src/utils/: fs.rs  mod.rs  net.rs
test/service-a/: index.html
test/service-b/: index.html
