[package]
name = "pqsecure-mesh"
version = "0.1.0"
edition = "2024"
authors = ["Jerry <vp780412@gmail.com>"]
description = "Post-Quantum Secure Proxy for Microservices"
readme = "README.md"
license = "BSL-1.1"
repository = "https://github.com/JerryR7/pqsecure-mesh"

[dependencies]
# Asynchronous runtime
tokio = { version = "1.44.2", features = ["full"] }

# Web framework
axum = { version = "0.8.3", features = ["headers"] }
tower = { version = "0.5.2" }
tower-http = { version = "0.6.2", features = ["trace", "cors"] }

# Serialization/Deserialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"

# Configuration management
config = "0.15.11"
dotenvy = "0.15.7"

# HTTP client
reqwest = { version = "0.12.15", features = ["json"] }

# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# Error handling
thiserror = "2.0.12"

# Cryptography
rustls = "0.23.25"
rustls-pemfile = "2.2.0"
rcgen = "0.13.2"
tokio-rustls = "0.26.2"
rand = "0.9.0"

# Monitoring
prometheus = "0.14.0"

# Other utilities
async-trait = "0.1.88"
uuid = { version = "1.16.0", features = ["v4", "serde"] }
url = "2.5.4"
chrono = { version = "0.4.40", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4.4"
mockall = "0.13.1"
