[package]
name = "pqsecure-mesh"
version = "0.1.0"
edition = "2024"
authors = ["Jerry <vp780412@gmail.com>"]
description = "Post-Quantum Secure Proxy for Microservices"
readme = "README.md"
license = "BSL-1.1"
repository = "https://github.com/JerryR7/pqsecure-mesh"

[dependencies]
# gRPC support with high concurrency
tonic = { version = "0.10", features = ["tls"] }
tokio = { version = "1.36", features = ["full"] }

# TLS + mTLS support (we'll patch rustls with oqs-openssl later)
rustls = "0.21"
tokio-rustls = "0.25"

# SPIFFE / SVID parsing & validation
spiffe = "0.6.5"

# X.509 Certificate parsing & CSR generation
rcgen = "0.11"
x509-parser = "0.15"

# HTTP/REST client for Smallstep CA API
reqwest = { version = "0.11.27", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging and telemetry
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
opentelemetry = "0.20"
opentelemetry-otlp = "0.15"

# Policy / ACL parsing
serde_yaml = "0.9"
regex = "1"

# WASM plugin engine (for future ACL support)
wasmtime = { version = "12", optional = true }

# Error handling
anyhow = "1"
thiserror = "1"

# JSON schema validation if needed
schemars = "0.8"

# PQC support (you’ll compile OpenSSL with OQS provider separately)
openssl = { version = "0.10", features = ["vendored"] }

[features]
default = []
wasm_policy = ["wasmtime"]