[package]
name = "pqsecure-mesh"
version = "0.1.0"
edition = "2021"
authors = ["Jerry <vp780412@gmail.com>"]
description = "A Post-Quantum Secure Zero-Trust Network Proxy for Microservices"
readme = "README.md"
license = "BSL-1.1"
repository = "https://github.com/JerryR7/pqsecure-mesh"

[dependencies]
# Basic asynchronous runtime
tokio = { version = "1.36", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# TLS and encryption related
rustls = { version = "0.21.0", features = ["dangerous_configuration"] }
tokio-rustls = "0.26.2"
rustls-pemfile = "2.2.0"
rcgen = "0.13.2"

# SPIFFE related
spiffe = "0.6.5"
x509-parser = "0.17.0"

# Network and API related
tonic = { version = "0.10.0", features = ["transport", "tls-roots"] }
reqwest = { version = "0.12.15", features = ["json", "rustls-tls"] }

# Tools and auxiliary libraries
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
regex = "1"
anyhow = "1"
thiserror = "2.0.12"
once_cell = "1.19"
tokio-util = "0.7"
bytes = "1.5"
clap = { version = "4.4", features = ["derive", "env"] }
uuid = { version = "1.6", features = ["v4"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.10"
rand = "0.9.0"
mockall = "0.13.1"

[features]
default = []
openssl-pqc = [] # Reserved for future OpenSSL PQC integration